Bug 894264 - Breakpad Stack scan: don't generate frames we aren't going to use.  r=ted.